[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codingame-solutions"
dynamic = ["version"]
authors = [
  {name = "Jakub Červinka", email = "cervinka.jakub.1989@gmail.com"},
]
description = "Automaticaly download your codingame solutions."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">= 3.8"
dependencies = [
    "typer==0.12.3",
    "codingame==1.4.3",
]

[project.scripts]
codingame-backup = "codingame_backup.main:app"

[tool.setuptools.dynamic]
version = {attr = "codingame_backup.__version__"}

[tool.setuptools.packages.find]
exclude = ["output"]